# pixospritz-arm

./: .dockerignore  .gitignore  CMakeLists.txt  COMPILATION_GUIDE.md  Dockerfile  ORBSTACK_BUILD.md  README.md  TODO.md  build_script_local.arm64.sh  container-diagnostic.sh  docker-build.sh  docker-clean.sh  docker-compose.yml  docker-rebuild-image.sh  docker-shell.sh  docker_build_script.sh  fix.sh  rg353v_build_script.sh  simple_tar_fix.sh  toolchain-rg353v.cmake
pixospritz-rg35xx-knulli/: Dockerfile.arm64  Dockerfile.x86_64  README.md  build.sh  build_script.arm64.sh  build_script.x86_64.sh
rg353v-custom/: Config.in  external.desc  external.mk
rg353v-custom/board/rg353v/: genimage.cfg  linux.config  post-build.sh  post-image.sh
rg353v-custom/board/rg353v/rootfs-overlay/etc/: fstab  inittab
rg353v-custom/board/rg353v/rootfs-overlay/etc/wpa_supplicant/: wpa_supplicant.conf
rg353v-custom/board/rg353v/rootfs-overlay/sbin/: game_init
rg353v-custom/configs/: rg353v_defconfig  rg353v_defconfig.backup
rg353v-custom/package/tar/: 0001-fix-macos-argp.patch.  tar.mk.override
src/: main.cpp
